+ Tweak CSS height for an 'unsized' json input to match the code default. Fixes #997. + Added CSS class to FormField indicating the type of child input. + Fixed label alignment in inline mode.

--- a/desktop/cmp/input/JsonInput.scss
+++ b/desktop/cmp/input/JsonInput.scss
@@ -16,10 +16,8 @@
     }
   }
 
-  // TODO - understanding sizing spec / requirements for component vs. generated CodeMirror.
-  // See also layout props on the component itself.
-  // https://github.com/exhi/hoist-react/issues/327
   .CodeMirror {
+    height: 100px;
     flex: 1;
     display: flex;
     flex-direction: column;
